# guix-data-service

./: .dir-locals.el  .envrc  .gitignore  Makefile.am  README  configure.ac  guile.am  guix-dev.scm  pre-inst-env.in  sqitch.conf  sqitch.plan  test-env
assets/css/: screen.css
build-aux/: test-env.in
guix-data-service/: branch-updated-emails.scm  builds.scm  comparison.scm  config.scm.in  data-deletion.scm  database.scm  jobs.scm  metrics.scm  substitutes.scm  utils.scm
guix-data-service/jobs/: load-new-guix-revision.scm
guix-data-service/model/: build-server-token-seed.scm  build-server.scm  build-status.scm  build.scm  channel-instance.scm  channel-news.scm  derivation.scm  git-branch.scm  git-repository.scm  guix-revision-package-derivation.scm  guix-revision-package.scm  guix-revision.scm  license-set.scm  license.scm  lint-checker.scm  lint-warning-message.scm  lint-warning.scm  location.scm  nar.scm  package-derivation-by-guix-revision-range.scm  package-derivation.scm  package-metadata.scm  package.scm  system-test.scm  system.scm  utils.scm
guix-data-service/web/: controller.scm  html-utils.scm  query-parameters.scm  render.scm  server.scm  sxml.scm  util.scm
scripts/: guix-data-service-backup-database  guix-data-service-create-small-backup  guix-data-service-manage-build-servers.in  guix-data-service-process-branch-updated-email  guix-data-service-process-branch-updated-email.in  guix-data-service-process-branch-updated-mbox.in  guix-data-service-process-job.in  guix-data-service-process-jobs.in  guix-data-service-query-build-servers.in  guix-data-service-query-substitute-servers.in  guix-data-service.in
sqitch/: sqitch.plan
sqitch/deploy/: add-tsvectors-per-locale.sql  add_derivation_source_file_nars.sql  add_derivation_sources_derivation_source_file_id_index.sql  add_git_repositories_cgit_url_base.sql  add_index_on_builds_derivation_file_name.sql  add_location_information.sql  add_retry_value_to_job_event_enum.sql  add_some_database_indexes.sql  allow_including_and_excluding_branches_for_repositories.sql  appschema.sql  build_add_build_server_build_id.sql  build_server_token_seeds.sql  build_servers_build_config.sql  build_servers_lookup_builds.sql  build_status_add_unique_index.sql  build_status_nullable_timestamp.sql  builds_add_derivation_output_details_set_id.sql  builds_remove_build_server_id_derivation_unique_constraint.sql  buildstatus_enum.sql  change_autovacuum_config.sql  change_derivation_source_file_nars_constraint.sql  change_git_branches_primary_key.sql  change_load_new_guix_revision_job_logs_contents_to_be_nullable.sql  change_locale_values.sql  change_nar_urls_size_to_bigint.sql  change_nars_size_to_bigint.sql  change_package_derivations_by_guix_revision_range_target.sql  change_package_derivations_target.sql  change_package_descriptions_index.sql  channel_instance_derivations.sql  channel_news_tables.sql  create_latest_build_status.sql  create_narinfo_fetch_records_index.sql  dates_to_load_new_guix_revision_jobs.sql  derivation_output_details_sets_derivation_output_details_ids_index.sql  derivation_output_sets.sql  derivation_source_files_store_path_hash_index.sql  derivations_hash_index.sql  drop_package_versions_by_guix_revision_range.sql  fix_duplicated_licenses.sql  (+41 more)
sqitch/revert/: add-tsvectors-per-locale.sql  add_derivation_source_file_nars.sql  add_derivation_sources_derivation_source_file_id_index.sql  add_git_repositories_cgit_url_base.sql  add_index_on_builds_derivation_file_name.sql  add_location_information.sql  add_retry_value_to_job_event_enum.sql  add_some_database_indexes.sql  allow_including_and_excluding_branches_for_repositories.sql  appschema.sql  build_add_build_server_build_id.sql  build_server_token_seeds.sql  build_servers_build_config.sql  build_servers_lookup_builds.sql  build_status_add_unique_index.sql  build_status_nullable_timestamp.sql  builds_add_derivation_output_details_set_id.sql  builds_remove_build_server_id_derivation_unique_constraint.sql  buildstatus_enum.sql  change_autovacuum_config.sql  change_derivation_source_file_nars_constraint.sql  change_git_branches_primary_key.sql  change_load_new_guix_revision_job_logs_contents_to_be_nullable.sql  change_locale_values.sql  change_nar_urls_size_to_bigint.sql  change_nars_size_to_bigint.sql  change_package_derivations_by_guix_revision_range_target.sql  change_package_derivations_target.sql  change_package_descriptions_index.sql  channel_instance_derivations.sql  channel_news_tables.sql  create_latest_build_status.sql  create_narinfo_fetch_records_index.sql  dates_to_load_new_guix_revision_jobs.sql  derivation_output_details_sets_derivation_output_details_ids_index.sql  derivation_output_sets.sql  derivation_source_files_store_path_hash_index.sql  derivations_hash_index.sql  drop_package_versions_by_guix_revision_range.sql  fix_duplicated_licenses.sql  (+41 more)
sqitch/verify/: add-tsvectors-per-locale.sql  add_derivation_source_file_nars.sql  add_derivation_sources_derivation_source_file_id_index.sql  add_git_repositories_cgit_url_base.sql  add_index_on_builds_derivation_file_name.sql  add_location_information.sql  add_retry_value_to_job_event_enum.sql  add_some_database_indexes.sql  allow_including_and_excluding_branches_for_repositories.sql  appschema.sql  build_add_build_server_build_id.sql  build_server_token_seeds.sql  build_servers_build_config.sql  build_servers_lookup_builds.sql  build_status_add_unique_index.sql  build_status_nullable_timestamp.sql  builds_add_derivation_output_details_set_id.sql  builds_remove_build_server_id_derivation_unique_constraint.sql  buildstatus_enum.sql  change_autovacuum_config.sql  change_derivation_source_file_nars_constraint.sql  change_git_branches_primary_key.sql  change_locale_values.sql  channel_news_tables.sql  (+57 more)
tests/: branch-updated-emails.scm  driver.scm  jobs-load-new-guix-revision.scm  mock-inferior.scm  model-derivation.scm  model-git-branch.scm  model-git-repository.scm  model-license-set.scm  model-license.scm  model-lint-checker.scm  model-lint-warning-message.scm  model-package-metadata.scm  model-package.scm
(+17 files in other folders)
